--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,21 @@
+# Local files
+data/
+
+# Derivative files
+**/*.DS_Store
+**/*.pdf
+**/*.log
+**/*.tex
+**/*.aux
+**/*.out
+**/*.html
+
 # History files
 .Rhistory
 .Rapp.history
 
 # Session Data files
 .RData
-.RDataTmp
 
 # User-specific files
 .Ruserdata
@@ -38,12 +49,3 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
-
-# pkgdown site
-docs/
-
-# translation temp files
-po/*~
-
-# RStudio Connect folder
-rsconnect/
